--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/styles/index.css">
+  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">  
-  <title>Document</title>
+  <title>Geo Visit</title>
 </head>
 <body>
 
 <!-- NavBar - Bootstrap -->
-  <nav class="navbar navbar-expand-lg navbar-light top-fixed" id="menu-bar">
+  <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top" id="menu-bar">
     <div class="container-fluid">
        <img src="assets/images/logo.png" alt="" class="logo">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
