--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#specials">Indicações</a></li>
-              <li><a class="dropdown-item" href="#">Os melhores!</a></li>
+              <li><a class="dropdown-item" href="#bests">Os melhores!</a></li>
             </ul>
           </li>
         </ul>
@@ -110,7 +110,7 @@
           <img src="assets/images/special1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Rio de Janeiro, Brazil</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">O Rio de Janeiro é mundialmente conhecido por suas paisagens deslumbrantes, praias icônicas como Copacabana e Ipanema, e o emblemático Cristo Redentor no topo do Corcovado. A cidade combina uma vibrante vida urbana com belezas naturais, além de ser famosa por seu carnaval, considerado um dos maiores e mais animados do mundo.</p>
           </div>
         </div>
       </div>
@@ -119,7 +119,7 @@
           <img src="assets/images/special2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Pantjoran Chinatown PIK, Indonesia</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Pantejoran Chinatown em Pantai Indah Kapuk (PIK), Jacarta, é uma área vibrante que mistura tradições chinesas com modernidade. Este destino é conhecido por sua ampla variedade de restaurantes autênticos, arquitetura temática e eventos culturais. É um ponto de encontro popular tanto para locais quanto para turistas que buscam uma experiência cultural rica e diversificada.</p>
           </div>
         </div>
       </div>
@@ -128,7 +128,7 @@
           <img src="assets/images/special3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Pragser Wildsee, Italy</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Pragser Wildsee, também conhecido como Lago di Braies, é um dos lagos alpinos mais bonitos da Itália. Localizado nos Dolomitas, oferece águas cristalinas de cor esmeralda, rodeadas por montanhas majestosas. É um local ideal para caminhadas, passeios de barco e relaxamento, sendo uma excelente escolha para os amantes da natureza e fotografia.</p>
           </div>
         </div>
       </div>
@@ -139,25 +139,159 @@
     </p>
   </section>
 
-  <main class="content-main m-5">
-    <ul class="nav nav-tabs" id="myTab" role="tablist">
+  <!-- conteudos principais (locais/3 de cada) -->
+  <main class="ª content-main m-5 text-center" id="bests">
+    <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
       <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Home</button>
+        <button class="nav-link active" id="americas-tab" data-bs-toggle="tab" data-bs-target="#americas-tab-pane" type="button" role="tab" aria-controls="americas-tab-pane" aria-selected="true">Américas</button>
       </li>
       <li class="nav-item" role="presentation">
-        <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Profile</button>
+        <button class="nav-link" id="europe-tab" data-bs-toggle="tab" data-bs-target="#europe-tab-pane" type="button" role="tab" aria-controls="europe-tab-pane" aria-selected="false">Europa</button>
       </li>
       <li class="nav-item" role="presentation">
-        <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Contact</button>
+        <button class="nav-link" id="others-tab" data-bs-toggle="tab" data-bs-target="#others-tab-pane" type="button" role="tab" aria-controls="others-tab-pane" aria-selected="false">Outros</button>
       </li>
     </ul>
-    <div class="tab-content" id="myTabContent">
-      <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">...</div>
-      <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">...</div>
-      <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">...</div>
-      <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">...</div>
-    </div>
+
+    <!-- cards -->
+    <div class="tab-content text-center" id="myTabContent">
+
+      <!-- americas -->
+      <div class="tab-pane fade show active" id="americas-tab-pane" role="tabpanel" aria-labelledby="americas-tab" tabindex="0">
+        <div class="container text-center">
+          <div class="row m-4">
+            <div class="col mb-3" id="place1-a">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/images/america-place-one.jpg" class="card-img-top" alt="Central Park, USA">
+                <div class="card-body">
+                  <p class="card-text"><span class="fw-bold">Central Park em Nova York</span>
+                    <br>
+                    proporciona um refúgio verde com lagos, trilhas e espaços abertos, ideal para atividades ao ar livre e relaxamento.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col mb-3" id="place2-a">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/images/america-place-two.jpg" class="card-img-top" alt="Lençóis Maranhenses, Brazil">
+                <div class="card-body">
+                  <p class="card-text"><span class="fw-bold">Lençóis Maranhenses</span>
+                    <br>
+                    encantam com suas dunas brancas e lagoas azul-turquesa. Este cenário único é perfeito para caminhadas e banhos relaxantes nas lagoas.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col mb-3" id="place3-a">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/images/americas-place-three.jpg" class="card-img-top" alt="Machu Picchu, Peru">
+                <div class="card-body">
+                  <p class="card-text"><span class="fw-bold">Machu Picchu</span>
+                    <br>
+                    com suas ruínas incas bem preservadas e localização entre montanhas, oferece uma experiência histórica e visual inesquecível.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- europa -->
+      <div class="tab-pane fade" id="europe-tab-pane" role="tabpanel" aria-labelledby="europe-tab" tabindex="0">
+        <div class="container text-center">
+          <div class="row m-4">
+            <div class="col mb-3" id="place1-e">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/images/europe1.jpg" class="card-img-top">
+                <div class="card-body">
+                  <p class="card-text"><span class="fw-bold">Paris, França</span>
+                    <br>
+                    encanta com a Torre Eiffel e a Catedral de Notre-Dame. Passear pelo Sena e explorar seus bairros é inesquecível.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col mb-3" id="place2-e">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/images/europe-2.jpg" class="card-img-top" >
+                <div class="card-body">
+                  <p class="card-text"><span class="fw-bold">Santorini, Grécia</span>
+                    <br>
+                    é famosa por suas casas brancas, vistas do mar Egeu e pores do sol espetaculares.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col mb-3" id="place3-e">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/images/europe-3.jpg" class="card-img-top">
+                <div class="card-body">
+                  <p class="card-text"><span class="fw-bold">Interlaken, Suiça</span>
+                    <br>
+                    entre os lagos Thun e Brienz, é cercada pelos Alpes suíços, ideal para amantes da natureza.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Outros -->
+      <div class="tab-pane fade" id="others-tab-pane" role="tabpanel" aria-labelledby="others-tab" tabindex="0">
+        <div class="container text-center">
+          <div class="row m-4">
+            <div class="col mb-3" id="place1-o">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/images/others-1.jpg" class="card-img-top">
+                <div class="card-body">
+                  <p class="card-text"><span class="fw-bold">Kyoto, Japão</span>
+                    <br>
+                    Kyoto é famosa por seus templos antigos, jardins zen e florestas de bambu, oferecendo uma experiência cultural rica e tranquila.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col mb-3" id="place2-o">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/images/others-2.jpg" class="card-img-top" >
+                <div class="card-body">
+                  <p class="card-text"><span class="fw-bold">Cairo, Egito</span>
+                    <br>
+                    Cairo encanta com as Grandes Pirâmides de Gizé e o Rio Nilo. A cidade mistura história antiga com uma vibrante vida urbana</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col mb-3" id="place3-o">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/images/others-3.jpg" class="card-img-top">
+                <div class="card-body">
+                  <p class="card-text"><span class="fw-bold">Queenstown, Nova Zelândia</span>
+                    <br>
+                    Queenstown é rodeada por montanhas e lagos cristalinos, sendo ideal para atividades ao ar livre como esqui e trilhas.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+
   </main>
+  
+  <!-- footer -->
+  <footer class="container-bottom text-center bg-light p-5">
+    <img src="assets/images/logo.png" class="logo">
+    <p class="tnx m-3">
+      Obrigado por acessar o Geo Visit!
+    </p>
+    <span class="att">
+      Nosso site foi desenvolvido numa versão beta em <span class="fw-bold fst-italic light-green">BootStrap</span>
+      <br>
+      portanto esta sujeito a bugs e limitações!
+    </span>
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
